--- a/index.html
+++ b/index.html
@@ -32,19 +32,25 @@
         </div>
      </div>
      <div class="d-flex justify-content-around">
-       <div class="">  Colton Smith 
-        Verified Buyer
-        "We needed the same printed design as the one we had ordered a week prior.
-        Not only did they find the original order, but we also received it in time.
-        Excellent!"</div>
-       <div class="">  Irene Roberts 
-        Verified Buyer
-        "Customer service is always excellent and very quick turn around. Completely
-        delighted with the simplicity of the purchase and the speed of delivery."</div>
-       <div class=""> Anne Wallace 
-        Verified Buyer
-        "Put an order with this company and can only praise them for the very high
-        standard. Will definitely use them again and recommend them to everyone!"</div>
+       <div class="card">  
+        <div class="card-body">
+          <div class="card-title">Colton Smith <span> Verified Buyer</span></div> 
+          "We needed the same printed design as the one we had ordered a week prior.
+          Not only did they find the original order, but we also received it in time.
+          Excellent!"</div>
+        </div>
+       <div class="card"> 
+        <div class="card-body">
+          <div class="card-title">Irene Roberts <span>Verified Buyer</span></div> 
+          "Customer service is always excellent and very quick turn around. Completely
+          delighted with the simplicity of the purchase and the speed of delivery."</div>
+        </div>
+       <div class="card"> 
+          <div class="card-body">
+            <div class="card-title">Anne Wallace <span>Verified Buyer</span></div>
+            "Put an order with this company and can only praise them for the very high
+            standard. Will definitely use them again and recommend them to everyone!"</div>
+        </div>
      </div>
       
     
