--- a/index.html
+++ b/index.html
@@ -34,20 +34,29 @@
      <div class="d-flex justify-content-around">
        <div class="card">  
         <div class="card-body">
-          <div class="card-title">Colton Smith <span> Verified Buyer</span></div> 
+          <div>
+            <img src="images/image-colton.jpg" alt="Colton_jpg" >
+            <strong class="card-title">Colton Smith <p> Verified Buyer</p></strong> 
+          </div>
           "We needed the same printed design as the one we had ordered a week prior.
           Not only did they find the original order, but we also received it in time.
           Excellent!"</div>
         </div>
-       <div class="card"> 
+       <div class="card"  id="card2"> 
         <div class="card-body">
-          <div class="card-title">Irene Roberts <span>Verified Buyer</span></div> 
+          <div>
+            <img src="images/image-irene.jpg" alt="Irene_jpg" >
+            <strong class="card-title">Irene Roberts <p>Verified Buyer</p></strong> 
+          </div>
           "Customer service is always excellent and very quick turn around. Completely
           delighted with the simplicity of the purchase and the speed of delivery."</div>
         </div>
-       <div class="card"> 
+       <div class="card" id="card3"> 
           <div class="card-body">
-            <div class="card-title">Anne Wallace <span>Verified Buyer</span></div>
+            <div>
+            <img src="images/image-anne.jpg" alt="Anne_jpg" >
+            <strong class="card-title">Anne Wallace <p>Verified Buyer</p></strong>
+            </div>
             "Put an order with this company and can only praise them for the very high
             standard. Will definitely use them again and recommend them to everyone!"</div>
         </div>
