--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
     <link rel="stylesheet" type="text/css" href="styles.css"/>
   </head>
   <body>
+    <img src="images/bg-pattern-top-desktop.svg" alt="top_bg" class="imgtop"> 
+    <img src="images/bg-pattern-bottom-desktop.svg" alt="bottom_bg" class="imgbot">
     <main class="container">
       <div class="d-flex justify-content-around ">
-        <div class="block">
-          <h1>10,000+ of our users love our products.</h1>
+        <div class="block" id="block1">
+          <h1><strong>10,000+ of our users love our products.</strong></h1>
           <p>We only provide great products combined with excellent customer service.
           See what our satisfied customers are saying about our services.</p>
         </div>
-        <div class="block">    
-          <p>Rated 5 Stars in Reviews</p>
-          <p>Rated 5 Stars in Report Guru</p>
-          <p>Rated 5 Stars in BestTech</p>
+        <div class="block" id="block2">    
+          <div class="rect" id="rect1"><div class="star"></div>Rated 5 Stars in Reviews</div>
+          <div class="rect" id="rect2"><div class="star"></div> 5 Stars in Report Guru</div>
+          <div class="rect" id="rect3"><div class="star"></div>Rated 5 Stars in BestTech</div>
         </div>
      </div>
      <div class="d-flex justify-content-around">
-       <div class="card">  
+       <div class="card" id="card1">  
         <div class="card-body">
           <div>
             <img src="images/image-colton.jpg" alt="Colton_jpg" >
