--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           See what our satisfied customers are saying about our services.</p>
         </div>
         <div class="block" id="block2">    
-          <div class="rect" id="rect1"><div class="star"></div>Rated 5 Stars in Reviews</div>
-          <div class="rect" id="rect2"><div class="star"></div> 5 Stars in Report Guru</div>
-          <div class="rect" id="rect3"><div class="star"></div>Rated 5 Stars in BestTech</div>
+          <div class="rect" id="rect1"><div class="star_container"><div class="star"></div></div>Rated 5 Stars in Reviews</div>
+          <div class="rect" id="rect2"><div class="star_container"><div class="star"></div></div>5 Stars in Report Guru</div>
+          <div class="rect" id="rect3"><div class="star_container"><div class="star"></div></div>Rated 5 Stars in BestTech</div>
         </div>
      </div>
      <div class="d-flex justify-content-around">
